cycle/kubernates/springboot-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-app-475e67f9-7b47-465b-a109-47ff47c41ee6
  namespace: 3219e62e-f28c-4e9a-b62e-77aae69fb44b
spec:
  replicas: 1
  selector:
    matchLabels:
      app: springboot-app-475e67f9-7b47-465b-a109-47ff47c41ee6
  template:
    metadata:
      labels:
        app: springboot-app-475e67f9-7b47-465b-a109-47ff47c41ee6
    spec:
      containers:
      - name: springboot
        image: ravi8881/3219e62e-f28c-4e9a-b62e-77aae69fb44b-70114ee3-7c51-40a6-af98-bd2ca53150ad-17cd568b-1349-4670-a8ae-53d47334febc-475e67f9-7b47-465b-a109-47ff47c41ee6-graph:2.0.0
        ports:
        - containerPort: 8081
